fix grid spacing issues

--- a/app/layout.module.scss
+++ b/app/layout.module.scss
@@ -7,5 +7,5 @@
 }
 
 .container > * {
-  margin-bottom: 0.5vw;
+  margin-bottom: 1vw;
 }
