--- a/components/global-styles/main.scss
+++ b/components/global-styles/main.scss
@@ -43,8 +43,8 @@ blockquote {
 p {
   @include font-regular;
   font-size: 3.5vw;
-  padding-top: 1vw;
-  padding-bottom: 1vw;
+  padding-top: 1.5vw;
+  padding-bottom: 1.5vw;
 }
 
 a {
